--- a/index.html
+++ b/index.html
@@ -20,15 +20,32 @@ Select ONE Additional Feature to Add
   <title>Project: Recipe book</title>
   <meta charset="utf-8">
   <style>
+    table, th, td {border: 1px solid;}
   </style>
 </head>
 
 <body>
 
-  <h1>____'s Recipe Book</h1>
+  <h1 font size="+50">POTATO: GOLD FROM THE GROUND</h1>
+  <h2>The potato is nature's greatest invention. It is the most versitile food. It is the world's most valuble resource and should be treated a such. </h2>
+  <h3 id="mashed">Mashed Potatoes</h3>
 
-  <h2>Contents:</h2>
-
+<table>
+  <thead>
+    <tr>
+      <th>ingredient</th>
+      <th>how to prepare</th>
+    </tr>
+    <tr>
+      <th>potatoes</th>
+      <th>peel and cut in to pieces</th>
+    </tr>
+    <tr>
+      <th>garlic</th>
+      <th>put in large pot with potatoes</th>
+    </tr>
+  </thead>
+</table>
   <ol>
     <li><a href="?">Recipe #1</a></li>
   </ol>
